scss/modules/card.scss
@use "sass:map";
@use "../theme";

.card {
	background-color: map.get(theme.$card, "bg");
	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
	border-radius: 5px;
	margin: 15px 0;

	.card-header {
		height: 150px;
		position: relative;
		text-align: center;
		bottom: 15px;

		.header-title {
			color: white;
			font-size: 2.0em;
			left: 15px;
			position: absolute;
		}

		img {
			height: 150px;
			object-fit: cover;
			width: 100%;
			border-top-left-radius: 5px;
			border-top-right-radius: 5px;
		}

		h2 {
			bottom: 0;
			color: white;
			font-size: 2.0em;
			font-weight: normal;
			margin: 0;
			padding: 15px;
			position: absolute;
			text-shadow: 0 1px 4px rgba(0, 0, 0, 0.9);
		}
	}

	.card-content {
		line-height: 1.5em;
		padding: theme.$main-padding;

		hr {
			border: 0;
			border-bottom: 1px solid rgba(255, 255, 255, 0.3);
			border-top: 1px solid rgba(0, 0, 0, 0.1);
			height: 0;
		}
	}
}

